<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_desc_btn_back_to_home"
            android:padding="4dp"
            android:src="@drawable/ic_not_favorite"
            android:tint="?attr/colorSecondaryVariant"
            app:layout_constraintEnd_toStartOf="@id/btn_share"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_desc_btn_back_to_home"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/content_desc_btn_back_to_home"
            android:padding="4dp"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line_left"
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toStartOf="@id/line_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <View
            android:id="@+id/line_right"
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line_left"
            app:layout_constraintTop_toBottomOf="@id/img" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/popularity"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/line_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <TextView
            android:id="@+id/txt_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/line_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularity"
            tools:text="3343.123" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/rating"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/line_right"
            app:layout_constraintStart_toStartOf="@id/line_left"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/line_right"
            app:layout_constraintStart_toStartOf="@id/line_left"
            app:layout_constraintTop_toBottomOf="@+id/txt_popularity"
            tools:text="4.2" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/language"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/img" />

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/txt_popularity"
            tools:text="English" />

        <androidx.cardview.widget.CardView
            android:id="@+id/img"
            android:layout_width="160dp"
            android:layout_height="240dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back_to_home">

            <ImageView
                android:id="@+id/imgPoster"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster_image"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toTopOf="@id/img"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            tools:text="Category" />

        <TextView
            android:id="@+id/txtReleasedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_semi_bold"
            android:maxLines="5"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toBottomOf="@+id/txtCategory"
            tools:text="Released Date" />

        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/overview"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_popularity" />

        <TextView
            android:id="@+id/txtOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_overview"
            tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>