<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:tint="@color/white"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:tint="@color/white"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

</menu>